<resources>
    <string name="app_name">MKT App</string>
    <string name="landing_text"><u>MKT App</u></string>
    <string name="wrong_date_title">Wrong Date/Time</string>
    <string name="wrong_date_msg">Wrong date/time detected. Kindly correct phone date in order to use this application.</string>
    <string name="helpcenter_test_card_text">TGL Test</string>
    <string name="helpcenter_interview_card_text">TGL Interview</string>
    <string name="helpcenter_mapping_card_text">Field Mapping</string>
    <string name="helpcenter_tfm_card_text">Trust Group Formation</string>
    <string name="helpcenter_text">Help Center</string>
    <string name="helpcenter_activity_group_faq_headline">Frequently Asked Questions:</string>
    <string name="helpcenter_activity_group_activity_issues_headline">Activity Groups:</string>
    <string name="tfm_capture_template">Capture</string>
    <string name="tfm_verify_template">Authenticate</string>
    <string name="tfm_capture_template_header">Capture ID</string>
    <string name="tfm_verify_template_header">Verify ID</string>
    <string name="tfm_activity_name">Home</string>
    <string name="tfm_help">Help</string>
    <string name="search_here">Search…</string>
    <string name="tfm_checklist_question">Each question goes here</string>
    <string name="tfm_collect_upfront_deposit">Collect upfront deposit</string>
    <string name="tfm_issue_receipt_for_upfront">Issue receipt for upfront deposit</string>
    <string name="tfm_checklist_status_saved">Checklist Status Saved</string>
    <string name="tfm_please_complete_checklist">Please complete checklist</string>
    <string name="tfm_please_complete_upfront_checklist">Please complete upfront checklist</string>
    <string name="tfm_checklist_preamble">Instructions\n\n1. Ensure all checklist parameters are satisfied before checking.\n2. If upfront is received and checklist parameter checked, receipt must be issued and the attributed checklist checked.</string>
    <string name="leader_name">Leader Name Goes Here</string>
    <string name="leader_village">Leader Village</string>
    <string name="leader_ik_number">IK Number</string>
    <string name="leader_lga">LGA</string>
    <string name="leader_location">Location</string>
    <string name="leader_crop">Crop</string>
    <string name="leader_member_program">Member Program</string>
    <string name="leader_member_none">none</string>
    <string name="add_new_member">Add New Member</string>
    <string name="tfm_face_already_registered">Face already registered</string>
    <string name="tfm_wait_for_recapture">Please wait for your template to be recaptured</string>
    <string name="tfm_dialog_attention">ATTENTION</string>
    <string name="tfm_dialog_congrats">CONGRATULATIONS</string>
    <string name="tfm_authentication_preamble">This activity authenticates new leader\'s face press \'OK\' to continue</string>
    <string name="tfm_caution_register_member_first">Other actions can only be performed on registered members</string>
    <string name="tfm_register_leader_before_member">Leader not registered, register leader to add new member</string>
    <string name="tfm_maximum_member_reached">Maximum members reached for this trust group</string>
    <string name="tfm_select_member_program">Please select a member program</string>
    <string name="tfm_question_register_leader_now">Do you want to register the leader now?</string>
    <string name="tfm_leader_cannot_be_deactivated">Leader Already registered, cannot be deactivated</string>
    <string name="tfm_new_leader_template_failed">New leader template failed</string>
    <string name="tfm_new_member_template_failed">New member template failed</string>
    <string name="tfm_new_member_template_passed">Member details saved successfully</string>
    <string name="tfm_capture_new_member_template">Click OK to capture new member template</string>
    <string name="tfm_member_deactivated_successfully">Member deactivated successfully</string>
    <string name="tfm_member_reactivated_successfully">Member reactivated successfully</string>
    <string name="tfm_member_deactivation_not_successfully">Member deactivation not successful</string>
    <string name="tfm_member_reactivation_not_successfully">Member deactivation not successful</string>
    <string name="tfm_member_reacttivate_member_question">Do you want to reactivate this member?</string>
    <string name="tfm_maximum_members_reached">Maximum members reached for this trust group</string>
    <string name="tfm_reactivate_leader_first">Please activate leader before activating member</string>
    <string name="tfm_member_deacttivate_member_question">Do you want to deactivate this member?</string>
    <string name="tfm_other_actions_for_members">Other actions can only be performed on registered members</string>
    <string name="tfm_other_actions_for_leaders">Other actions can only be performed after activating leader</string>
    <string name="bottom_sheet_select_group_program">Select Group Program</string>
    <string name="bottom_sheet_select_MA">MA</string>
    <string name="bottom_sheet_select_KKG">KKG</string>
    <string name="member_name">Member Name Goes Here</string>
    <string name="member_role">Member Role</string>
    <string name="edit">Edit</string>
    <string name="switch_role_to_secretary">Switch Role to Secretary</string>
    <string name="switch_role_to_member">Switch Role to Member</string>
    <string name="map_field">Map Field</string>
    <string name="download">Download</string>
    <string name="next">Next</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="alert_warning">(!) Ensure that the details are correct before you proceed</string>
    <string name="tfm_member_info_label">Member\'s Information</string>
    <string name="tfm_member_info_first_name">First Name</string>
    <string name="tfm_member_info_last_name">Last Name</string>
    <string name="tfm_member_info_age">Age</string>
    <string name="tfm_member_info_phone_number">Phone Number</string>
    <string name="tfm_member_info_field_size">Est. Loan field size for BG in Ha</string>
    <string name="tfm_member_info_sex">Sex</string>
    <string name="tfm_member_info_member_role">Member Role</string>
    <string name="tfm_member_info_field_size_text_holder">Field Size</string>
    <string name="tfm_member_info_crop_type">Crop Type</string>
    <string name="tfm_member_info_same_location">Member Location Same as Leader\'s Location</string>
    <string name="registration_action_old_1">Old1</string>
    <string name="registration_action_old_2">Old2</string>
    <string name="variable_id">T-10000000000000AA</string>
    <string name="tfm_error_first_name">Please enter first name</string>
    <string name="tfm_error_last_name">Please enter last name</string>
    <string name="tfm_error_empty_phone_number">Please enter phone number</string>
    <string name="tfm_error_wrong_phone_number">Incorrect phone number</string>
    <string name="tfm_error_empty_age">Please enter age</string>
    <string name="tfm_error_wrong_age">Wrong age range</string>
    <string name="tfm_error_empty_field_size">Please enter field size</string>
    <string name="tfm_error_wrong_field_size">"Please field size should be less than 20Ha and entered in format 'x.x' e.g. 0.1 "</string>
    <string name="tfm_error_sex">Please select sex</string>
    <string name="tfm_error_crop_type">Please select crop type</string>
    <string name="tfm_error_member_role">Please select member role</string>
    <string name="tfm_member_info_bottom_sheet_first_name">First Name:</string>
    <string name="tfm_member_info_bottom_sheet_last_name">Last Name:</string>
    <string name="tfm_member_info_bottom_sheet_age">Age:</string>
    <string name="tfm_member_info_bottom_sheet_phone_number">Phone Number:</string>
    <string name="tfm_member_info_bottom_sheet_sex">Sex:</string>
    <string name="tfm_member_info_bottom_sheet_member_role">Member Role:</string>
    <string name="tfm_member_info_bottom_sheet_field_size">Field Size:</string>
    <string name="tfm_member_info_bottom_sheet_crop_type">Crop Type:</string>
    <string name="tfm_member_info_sex_male">Male</string>
    <string name="tfm_member_info_sex_female">Female</string>
    <string name="tfm_member_info_role_secretary">Secretary</string>
    <string name="tfm_member_info_role_member">Member</string>
    <string name="tfm_member_info_preferred_crop1">Maize</string>
    <string name="tfm_member_info_preferred_crop2">Cowpea</string>
    <string name="tfm_member_info_preferred_crop3">Groundnut</string>
    <string name="tfm_member_loc_label">Member\'s Location</string>
    <string name="tfm_member_survey_label">Member\'s Survey (Optional)</string>
    <string name="tfm_member_loc_state">State</string>
    <string name="tfm_member_loc_lga">LGA</string>
    <string name="tfm_member_loc_ward">Ward</string>
    <string name="tfm_member_loc_village">Village/Town</string>
    <string name="tfm_member_other_crops">Other Crops</string>
    <string name="tfm_member_other_crops_not_listed">Other Crops Not Listed</string>
    <string name="add_member">Add Member</string>
    <string name="error_message_state">Please select state</string>
    <string name="error_message_lga">Please select LGA</string>
    <string name="error_message_ward">Please select member ward</string>
    <string name="error_message_village">Please select or enter member village</string>
    <string name="tfm_member_loc_bottom_sheet_state">State:</string>
    <string name="tfm_member_loc_bottom_sheet_lga">LGA:</string>
    <string name="tfm_member_loc_bottom_sheet_ward">Ward:</string>
    <string name="tfm_member_loc_bottom_sheet_village">Village/Town:</string>
    <string name="tfm_member_loc_other_bottom_sheet_other_crops">Other Crops:</string>
    <string name="tfm_member_loc_bottom_sheet_other_crops_not_listed">Other Crops Not Listed:</string>
    <string name="member_info_label">Member Information</string>
    <string name="member_info_firstname">First Name </string>
    <string name="member_info_lastname">Last Name </string>
    <string name="member_info_age">Age</string>
    <string name="referral_code">Referral code (Optional)</string>
    <string name="scan_referral_code">Scan Referral Code</string>
    <string name="member_info_phonenumber">Phone Number </string>
    <string name="member_info_sex">Sex </string>
    <string name="member_info_crop_type">Crop Type</string>
    <string name="location_dialogue">Are you currently in your village?</string>
    <string name="member_info_sex_male">Male </string>
    <string name="member_info_sex_female">Female </string>
    <string name="member_info_preferred_crop1">Maize </string>
    <string name="member_info_preferred_crop2">Cowpea </string>
    <string name="member_info_preferred_crop3">Groundnut </string>
    <string name="member_info_fname_error">Please enter first name</string>
    <string name="member_info_lname_error">Please enter last name</string>
    <string name="member_info_invalid_number">Please enter a correct phone number</string>
    <string name="help">Help</string>
    <string name="fieldMappingtext">Field Mapping</string>
    <string name="numtxt">1.</string>
    <string name="farmer">Farmer</string>
    <string name="set2q">How many wheel barrows of manure have you applied in the last 3 years?</string>
    <string name="set3q">What was grown on the farm this year?</string>
    <string name="drySeason">Dry season:</string>
    <string name="rainySeason">Rainy season:</string>
    <string name="enterCropType">Please enter the crop type</string>
    <string name="deviceSetUp">Setting Up Device</string>
    <string name="fieldName">Select Field Name</string>
    <string name="guide">Guide</string>
    <string name="keyword">Keyword</string>
    <string name="pleaseWait">Getting Location</string>
</resources>