<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        app:cardCornerRadius="4dp"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:textSize="18sp"
                    android:id="@+id/tvQNo"
                    android:text="@string/numtxt" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvQ"
                    android:text="@string/set3q"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/tvMem"
                    android:text="@string/farmer" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/drySeason"/>
                    <Spinner
                        android:id="@+id/spDry"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberPassword" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/rainySeason"/>
                    <Spinner
                        android:id="@+id/spRainy"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberPassword" />
                </LinearLayout>


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/other"
                    android:hint="@string/enterCropType"
                    android:visibility="gone"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/otherrainy"
                    android:hint="@string/enterCropType"
                    android:visibility="gone"/>



            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>