<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:weightSum="5"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_weight="0.01"
        android:weightSum="3">

        <ImageView
            android:id="@+id/ImageActive"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:background="@drawable/ic_back_button"
            android:clickable="true"
            android:onClick="back_device_setup"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fieldMappingtext"

            android:textColor="@color/view_black"
            android:textSize="20dp"
            android:layout_weight="2.4"
            android:layout_margin="10dp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textColor="@color/view_red"
            android:onClick="help_device_setup"
            android:textSize="18sp"
            style="@style/Widget.MaterialComponents.Button.TextButton"

            android:text="@string/help" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_weight=".5"
        android:gravity="center_horizontal"
        android:layout_marginVertical="7dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"

            android:textSize="25dp"
            android:text="@string/deviceSetUp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3.0"
        android:weightSum="1.0"
        android:orientation="vertical"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/count"

            android:layout_gravity="center_horizontal"
            android:layout_weight="1.0"

            android:textSize="45dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.9"
        android:weightSum="1.0"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"


        >
        <ProgressBar
            android:id="@+id/pb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="1.0"

            style="?android:attr/progressBarStyleHorizontal"
            android:minWidth="200dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.66"
        android:layout_gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:id="@+id/please"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:text="@string/pleaseWait"
            android:textSize="20dp"
            />
    </LinearLayout>
</LinearLayout>
