<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:weightSum="5"
    tools:context=".FieldMapping.deviceSetup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_weight="0.01"
        android:weightSum="3">

        <ImageView
            android:id="@+id/ImageActive"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:background="@drawable/ic_back_button"
            android:clickable="true"
            android:onClick="back_device_setup"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fieldMappingtext"

            android:textColor="@color/view_black"
            android:textSize="20dp"
            android:layout_weight="2.9"
            android:layout_margin="10dp"
            />



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_weight=".5"
        android:gravity="center_horizontal"
        android:layout_marginVertical="7dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:fontFamily="@font/roboto_regular"
            android:textSize="25dp"
            android:text="@string/fieldName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:orientation="horizontal"
        >



            <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:cardElevation="4dp"
                app:cardCornerRadius="4dp"

                android:layout_margin="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1.0"
                    android:orientation="horizontal"
                    >
                <TextView
                    android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                  android:layout_weight="0.3"
                android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/view_black"
                android:textSize="20dp"
                android:text="@string/guide" />
                <Spinner
                    android:id="@+id/guide"
                    android:layout_width="wrap_content"
                    android:layout_weight="0.7"
                    android:layout_height="wrap_content"

                    />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4.18"
        android:orientation="horizontal"
        >



        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:cardElevation="4dp"
            app:cardCornerRadius="4dp"

            android:layout_margin="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1.0"



                android:orientation="horizontal"


                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/view_black"
                    android:textSize="20dp"
                    android:text="@string/keyword" />
                <Spinner
                    android:id="@+id/keyword"
                    android:layout_width="wrap_content"
                    android:layout_weight="0.7"
                    android:layout_height="wrap_content"

                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

        <Button
            android:id="@+id/next"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"

            android:layout_below="@id/recyclerv_view"
            android:onClick="nextDesc"
            android:text="@string/next" />

</LinearLayout>
